Introduced a new User object to map the database to an Object
